// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should render IconButton 1`] = `
<div>
  <button
    class="components-button test1 has-icon"
    type="button"
  />
  <button
    class="components-button test2 has-icon"
    type="button"
  />
  <button
    class="components-button test3 has-icon"
    type="button"
  />
</div>
`;

exports[`IconButtonImplement should render IconButtonImplement 1`] = `
<div>
  <button
    class="components-button test1 has-icon"
    type="button"
  />
  <button
    class="components-button test2 has-icon"
    type="button"
  />
  <button
    aria-label="tooltip "
    class="components-button test3 has-icon"
    type="button"
  />
</div>
`;
